--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,6 @@ main:
   - title: "Categories"
     url: /categories/
   - title: "Responses"
-    url: /responses/
+    url: /tags/
   - title: "About"
     url: /about/
